added favicon and updated general look of the page.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,14 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='favicon.ico')}}" />
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
 
-    <title>Hello, world!</title>
+    <title>Book Review</title>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -23,22 +25,19 @@
 
 <body>
     <!-- if it is login -->
-    {% if session["login"] %}
+    {% if login %}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <a class="navbar-brand" href="{{url_for('index')}}">Book Review</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+        </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" id="index" href="{{url_for('index')}}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="search" href="{{url_for('search')}}">Search</a>
+                        <span class="nav-link text-white">Welcome {{ user_name }}</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="logout" href="{{url_for('logout')}}">Logout</a>
@@ -54,7 +53,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <a class="navbar-brand" href="{{url_for('index')}}">Book Review</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -74,7 +73,24 @@
     {% endif %}
     <!-- end navigation -->
 
-    <h1>{% block heading%} {% endblock %}</h1>
+    <!-- Alert -->
+    {% if success_message %}
+    <div class="alert alert-success" role="alert">
+        {{ success_message }}
+    </div>
+    {% endif %}
+    {% if danger_message %}
+    <div class="alert alert-danger" role="alert">
+        {{ danger_message }}
+    </div>
+    {% endif %}
+    {% if warning_message %}
+    <div class="alert alert-warning" role="alert">
+        {{ warning_message }}
+        </div>
+    {% endif %}
+
+    <h1 class="text-center mt-5">{% block heading%} {% endblock %}</h1>
     {% block body %}
     {% endblock %}
 
