--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,13 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    Login page
+    Welcome to Book Review
 {% endblock %}
 
 {% block body %}
-    <form class="form-signin" action="{{ url_for('index') }}" method="POST">
-        <!-- <img class="mb-4" src="" alt="" width="72" height="72"> -->
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <h1 class="h3 mb-3 font-weight-normal">{{ message }}</h1>
+<p class="p mb-3 font-weight-normal text-center">You can search our database of 5,000 books, read reviews by readers like you, and add your own reviews.</p>
+<p class="p mb-3 font-weight-normal text-center">To get started, log in or <a href="{{url_for('register')}}">register</a></p>
+<form class="form-signin" action="{{ url_for('index') }}" method="POST">
         <label for="inputUsername">Username</label>
         <input type="username" id="inputUsername" name="username" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword">Password</label>
@@ -16,9 +15,6 @@
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
-    <a href="{{url_for('register')}}">
-        <button class="btn btn-lg btn-primary btn-block mt-5" type="submit">Register</button>
-    </a>
   
     <script>
         $(document).ready(function(){
