--- a/templates/search.html
+++ b/templates/search.html
@@ -5,11 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <p>search</p>
+    <p class="text-center">search</p>
 
-    <script>
-        $(document).ready(function(){
-            $("#search").addClass("active");
-        });
-    </script>
 {% endblock %}
