added search function and book page

--- a/templates/search.html
+++ b/templates/search.html
@@ -14,4 +14,39 @@ Let's Search!
     <button class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
 </form>
 
+{% if results %}
+<div class="container">
+    <h1>Search Results</h1>
+
+    <table class="table table-hover">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">No.</th>
+                <th scope="col">ISBN</th>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Year</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for result in results %}
+            <tr class="clickable-row" data-href="{{ url_for('book', book_id=result.id)}}" style="cursor:pointer">
+                <th scope="row">{{ loop.index }}</th>
+                <td>{{result.isbn}}</td>
+                <td>{{result.title}}</td>
+                <td>{{result.author}}</td>
+                <td>{{result.year}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<script>
+    jQuery(document).ready(function ($) {
+        $(".clickable-row").click(function () {
+            window.location = $(this).data("href");
+        });
+    });
+</script>
+{% endif %}
 {% endblock %}
