updated alert box text alignment

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -75,17 +75,17 @@
 
     <!-- Alert -->
     {% if success_message %}
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-success text-center" role="alert">
         {{ success_message }}
     </div>
     {% endif %}
     {% if danger_message %}
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger text-center" role="alert">
         {{ danger_message }}
     </div>
     {% endif %}
     {% if warning_message %}
-    <div class="alert alert-warning" role="alert">
+    <div class="alert alert-warning text-center" role="alert">
         {{ warning_message }}
         </div>
     {% endif %}
