--- a/static/styles.css
+++ b/static/styles.css
@@ -27,3 +27,43 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  float: left;
+}
+.rating > input {
+  display: none;
+}
+.rating > label {
+  position: relative;
+  width: 1em;
+  font-size: 36px;
+  color: #ffd600;
+  cursor: pointer;
+}
+.rating > label::before {
+  content: "\2605";
+  position: absolute;
+  opacity: 0;
+}
+.rating > label:hover:before,
+.rating > label:hover ~ label:before {
+  opacity: 1 !important;
+}
+.rating > input:checked ~ label:before {
+  opacity: 1;
+}
+.rating:hover > input:checked ~ label:before {
+  opacity: 0.4;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 14px;
+  }
+  p {
+    font-size: 12px;
+  }
+}
