--- a/templates/book.html
+++ b/templates/book.html
@@ -14,4 +14,21 @@ Welcome to Book Review
         <li>Year: {{ book.year}} minutes</li>
     </ul>
 </div>
+<div class="container">
+    <h3 class="mb-n2">Write a review</h3>
+    <form action="{{ url_for('book', book_id=book.id)}}" method="POST">
+        <div class="form-group">
+            <div class="rating"> 
+                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label> 
+                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> 
+                <input type="radio" name="rating" value="3" id="3" checked="checked"><label for="3">☆</label> 
+                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label> 
+                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
+            </div>
+            <textarea class="form-control" name="review" rows="3"
+                placeholder="Enter your review here..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary float-right">Submit</button>
+    </form>
+</div>
 {% endblock %}
