reviews are now shown in book details page.

--- a/templates/book.html
+++ b/templates/book.html
@@ -15,7 +15,7 @@ Welcome to Book Review
     </ul>
 </div>
 <div class="container">
-    <h3 class="mb-n2">Write a review</h3>
+    <h4 class="mb-n2 mt-">Write a review</h4>
     <form action="{{ url_for('book', book_id=book.id)}}" method="POST">
         <div class="form-group">
             <div class="rating"> 
@@ -28,7 +28,33 @@ Welcome to Book Review
             <textarea class="form-control" name="review" rows="3"
                 placeholder="Enter your review here..."></textarea>
         </div>
-        <button type="submit" class="btn btn-primary float-right">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+{% if reviews %}
+<div class="container mt-3 mb-10">
+    <h4>Reviews</h4>
+    <table class="table table-hover">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">No.</th>
+                <th scope="col">Name</th>
+                <th scope="col">Rating</th>
+                <th scope="col">Review</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for review in reviews %}
+            <tr>
+                <th scope="row">{{ loop.index }}</th>
+                <td>{{review.name}}</td>
+                <td>{{review.rating}}</td>
+                <td>{{review.review}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<div style="height: 30px;"></div>
+{% endif %}
 {% endblock %}
