--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <span class="nav-link text-white">Welcome {{ user_name }}</span>
+                        <span class="nav-link text-white">Welcome {{ session["user_name"] }}</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="logout" href="{{url_for('logout')}}">Logout</a>
